ping_pong/manifests/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ping-pong-middleware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /pingpong
