ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ping-pong

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: hatohui/ping-pong:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8085
              name: pod-port

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
