ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ping-pong-service

spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 2346
      targetPort: pod-port
      name: service-port
