ping_pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-ping-pong-middleware@kubernetescrd

spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-service
                port:
                  name: service-port
